// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input text should render correctly render the input component 1`] = `
<div
  className="rn-inputBlock"
>
  <label
    className="inputLabel"
    htmlFor="user"
  >
    test
  </label>
  <input
    className="input hasContent"
    id="user"
    name="user"
    onChange={[MockFunction]}
    value="1234"
  />
</div>
`;

exports[`Input textarea should render correctly render the input component 1`] = `
<div
  className="rn-inputBlock"
>
  <label
    className="inputLabel"
    htmlFor="user"
  >
    test
  </label>
  <textarea
    className="textarea hasContent"
    cols="80"
    id="user"
    name="user"
    onChange={[MockFunction]}
    rows="5"
    value="1234"
  />
</div>
`;
